# seed-scraper

./: .gitignore  Cargo.toml
src/: main.rs
tests/fixtures/: seed.html
