[package]
name = "seeds-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.2"
regex = "1.5"
chrono = "0.4"
